--- a/index.html
+++ b/index.html
@@ -55,6 +55,9 @@
           <li class="nav-item">
             <a class="nav-link js-scroll-trigger" href="#contact">Contact</a>
           </li>
+          <li class="nav-item">
+            <a class="nav-link js-scroll-trigger" href="" target="_blank">View Resume</a>
+          </li>
         </ul>
       </div>
     </div>
@@ -69,8 +72,7 @@
           <hr class="divider my-4">
         </div>
         <div class="col-lg-8 align-self-baseline">
-          <p class="text-white mb-5">Software Engineer</p>
-          <a class="btn btn-primary btn-xl js-scroll-trigger" href="" target="_blank">View Resume</a>
+          <h2 class="text-white mb-5 font-weight-bold">Software Engineer</h2>
         </div>
       </div>
     </div>
