--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
             <a class="nav-link js-scroll-trigger" href="#contact">Contact</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link js-scroll-trigger" href="" target="_blank">View Resume</a>
+            <a class="nav-link js-scroll-trigger" href="https://docs.google.com/document/d/1eg65i1kVlfBjq_XLLbXdMNN_G2O3GpU7fvX_GXHWp14/edit?usp=sharing" target="_blank">View Resume</a>
           </li>
         </ul>
       </div>
