Add images and links

--- a/index.html
+++ b/index.html
@@ -95,10 +95,10 @@
     </div>
   </section>
 
-  <!-- Slills Section -->
+  <!-- Skills Section -->
   <section class="page-section" id="services">
     <div class="container">
-      <h1 class="text-center mt-0">Skillset</h1>
+      <h1 class="text-center mt-0">Skill Set</h1>
       <hr class="divider my-4">
       <div class="row devicon-list">
         <div data-aos="flip-up" data-aos-easing="linear"
@@ -177,7 +177,6 @@
     </div>
   </section>
 
-  <!-- Agency Portfolio Template -->
   <!-- Portfolio Grid -->
   <section class="page-section bg-primary" id="portfolio-agency">
     <div class="container">
@@ -196,14 +195,14 @@
               <h1><i class="fas fa-plus fa-0x"></i> View More!</h1>
             </div>
           </div>
-          <img class="img-fluid" src="" alt="">
+          <img class="img-fluid" src="./img/portfolio/GardenGnomeAllSeedsSS.JPEG" alt="">
         </a>
         <div class="portfolio-caption">
           <h4>Capstone project</h4>
         </div>
       </div>
 
-
+<!-- Message board -->
         <div class="col-lg-6 col-md-6 col-sm-6 portfolio-item" data-aos="zoom-in" data-aos-easing="linear"
        data-aos-duration="300">
           <a class="portfolio-link" data-toggle="modal" href="#portfolioModal2">
@@ -212,7 +211,7 @@
                 <h1><i class="fas fa-plus fa-0x"></i> View More!</h1>
               </div>
             </div>
-            <img class="img-fluid" src="" alt="">
+            <img class="img-fluid" src="./img/portfolio/messageBoard.JPG" alt="">
           </a>
           <div class="portfolio-caption">
             <h4>Message Board</h4>
@@ -260,7 +259,7 @@
 
   <!-- Portfolio Modals -->
 
-  <!-- Modal 1 - Capstone Project -->
+  <!-- Modal 1 - Garden Gnome -->
   <div class="portfolio-modal modal fade" id="portfolioModal1" tabindex="-1" role="dialog" aria-hidden="true">
     <div class="modal-dialog">
       <div class="modal-content">
@@ -270,14 +269,14 @@
               <div class="modal-body">
                 <!-- Project Details Go Here -->
                 <h2>Capstone Project</h2>
-                <img class="d-block mx-auto" src="" alt="">
+                <img class="d-block mx-auto" src="./img/portfolio/GardenGnomeAllSeedsSS.JPEG" alt="">
                 <p>Placeholder about project</p>
                 <ul class="list-inline">
                   <li>Deployed Site: <a href="" target="_blank">Link</a>>
                   </li>
-                  <li>Web Client GitHub Repository: <a href="" target="_blank">Link</a>
+                  <li>Web Client GitHub Repository: <a href="https://github.com/robert-a-johnston/garden-gnome-client" target="_blank">Link</a>
                   </li>
-                  <li>API GitHub Repository: <a href="" target="_blank">Link</a>
+                  <li>API GitHub Repository: <a href="https://github.com/robert-a-johnston/garden-gnome-API" target="_blank">Link</a>
                   </li>
                 </ul>
                 <button class="btn btn-primary" data-dismiss="modal" type="button">
@@ -301,14 +300,14 @@
               <div class="modal-body">
                 <!-- Project Details Go Here -->
                 <h2>Message Board</h2>
-                <img class="d-block mx-auto" src="" alt="">
+                <img class="d-block mx-auto" src="./img/portfolio/messageBoard.JPG" alt="">
                 <p>About the message board text placeholder </p>
                 <ul class="list-inline">
-                  <li>Deployed Site: <a href="" target="_blank">Link<a/>
+                  <li>Deployed Site: <a href="https://team-taco-project.github.io/taco-message-board-client/" target="_blank">Link</a>>
                   </li>
-                  <li>Web Client GitHub Repository: <a href="" target="_blank">Link</a>
+                  <li>Web Client GitHub Repository: <a href="https://github.com/team-taco-project/taco-message-board-client" target="_blank">Link</a>
                   </li>
-                  <li>API GitHub Repository: <a href="" target="_blank">Link</a>
+                  <li>API GitHub Repository: <a href="https://github.com/team-taco-project/taco-message-board-API" target="_blank">Link</a>
                   </li>
                 </ul>
                 <button class="btn btn-primary" data-dismiss="modal" type="button">
