--- a/index.html
+++ b/index.html
@@ -303,7 +303,7 @@
                 <img class="d-block mx-auto" src="./img/portfolio/messageBoard.JPG" alt="">
                 <p>About the message board text placeholder </p>
                 <ul class="list-inline">
-                  <li>Deployed Site: <a href="https://team-taco-project.github.io/taco-message-board-client/" target="_blank">Link</a>>
+                  <li>Deployed Site: <a href="https://team-taco-project.github.io/taco-message-board-client/" target="_blank">Link</a>
                   </li>
                   <li>Web Client GitHub Repository: <a href="https://github.com/team-taco-project/taco-message-board-client" target="_blank">Link</a>
                   </li>
@@ -334,7 +334,7 @@
                 <img class="d-block mx-auto" src="./img/portfolio/zooBuilder.JPG" alt="">
                 <p>Zoo builder placeholder text</p>
                 <ul class="list-inline">
-                  <li>Deployed Site: <a href="https://robert-a-johnston.github.io/zoo-builder-client/" target="_blank">Link<a/>
+                  <li>Deployed Site: <a href="https://robert-a-johnston.github.io/zoo-builder-client/" target="_blank">Link</a>
                   </li>
                   <li>Web Client GitHub Repository: <a href="https://github.com/robert-a-johnston/zoo-builder-client" target="_blank">Link</a>
                   </li>
@@ -365,7 +365,7 @@
                 <img class="d-block mx-auto" src="./img/portfolio/ticTacToeGame.JPG" alt="">
                 <p>Tic-tac-toe game text placeholder</p>
                 <ul class="list-inline">
-                  <li>Deployed Site: <a href="https://robert-a-johnston.github.io/Tic-Tac-Toe-client/" target="_blank">Link<a/>
+                  <li>Deployed Site: <a href="https://robert-a-johnston.github.io/Tic-Tac-Toe-client/" target="_blank">Link</a>
                   </li>
                   <li>Web Client GitHub Repository: <a href="https://github.com/robert-a-johnston/Tic-Tac-Toe-client" target="_blank">Link</a>
                   </li>
