Add garden gnome site link

--- a/index.html
+++ b/index.html
@@ -272,7 +272,7 @@
                 <img class="d-block mx-auto" src="./img/portfolio/GardenGnomeAllSeedsSS.JPEG" alt="">
                 <p>Placeholder about project</p>
                 <ul class="list-inline">
-                  <li>Deployed Site: <a href="" target="_blank">Link</a>>
+                  <li>Deployed Site: <a href="https://robert-a-johnston.github.io/garden-gnome-client/" target="_blank">Link</a>
                   </li>
                   <li>Web Client GitHub Repository: <a href="https://github.com/robert-a-johnston/garden-gnome-client" target="_blank">Link</a>
                   </li>
