--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 
   <!-- Google Fonts -->
   <link href="https://fonts.googleapis.com/css?family=Merriweather+Sans:400,700" rel="stylesheet">
-  <link href='https://fonts.googleapis.com/css?family=Merriweather:400,300,300italic,400italic,700,700italic' rel='stylesheet' type='text/css'>
+  <link href="https://fonts.googleapis.com/css?family=Merriweather:400,300,300italic,400italic,700,700italic" rel="stylesheet" type="text/css">
   <link href="https://fonts.googleapis.com/css?family=Varela+Round" rel="stylesheet">
 
   <!-- Plugin CSS -->
@@ -269,7 +269,7 @@
               <div class="modal-body">
                 <!-- Project Details Go Here -->
                 <h2>Capstone Project</h2>
-                <img class="d-block mx-auto" src="./img/portfolio/GardenGnomeAllSeedsSS.JPEG" alt="">
+                <img class="d-block mx-auto" src="./img/portfolio/GardenGnomeAllSeedsSS.JPEG" alt="Garden Gnome">
                 <p>Placeholder about project</p>
                 <ul class="list-inline">
                   <li>Deployed Site: <a href="https://robert-a-johnston.github.io/garden-gnome-client/" target="_blank">Link</a>
@@ -300,7 +300,7 @@
               <div class="modal-body">
                 <!-- Project Details Go Here -->
                 <h2>Message Board</h2>
-                <img class="d-block mx-auto" src="./img/portfolio/messageBoard.JPG" alt="">
+                <img class="d-block mx-auto" src="./img/portfolio/messageBoard.JPG" alt="Message Board">
                 <p>About the message board text placeholder </p>
                 <ul class="list-inline">
                   <li>Deployed Site: <a href="https://team-taco-project.github.io/taco-message-board-client/" target="_blank">Link</a>
@@ -331,7 +331,7 @@
               <div class="modal-body">
                 <!-- Project Details Go Here -->
                 <h2>Zoo Builder</h2>
-                <img class="d-block mx-auto" src="./img/portfolio/zooBuilder.JPG" alt="">
+                <img class="d-block mx-auto" src="./img/portfolio/zooBuilder.JPG" alt="Zoo Builder">
                 <p>Zoo builder placeholder text</p>
                 <ul class="list-inline">
                   <li>Deployed Site: <a href="https://robert-a-johnston.github.io/zoo-builder-client/" target="_blank">Link</a>
@@ -362,7 +362,7 @@
               <div class="modal-body">
                 <!-- Project Details Go Here -->
                 <h2>Tic Tac Toe!</h2>
-                <img class="d-block mx-auto" src="./img/portfolio/ticTacToeGame.JPG" alt="">
+                <img class="d-block mx-auto" src="./img/portfolio/ticTacToeGame.JPG" alt="Tic Tac Toe">
                 <p>Tic-tac-toe game text placeholder</p>
                 <ul class="list-inline">
                   <li>Deployed Site: <a href="https://robert-a-johnston.github.io/Tic-Tac-Toe-client/" target="_blank">Link</a>
