--- a/index.html
+++ b/index.html
@@ -87,9 +87,11 @@
         </div>
         <div class="text-center col-lg-7 col-sm-12" data-aos="zoom-in-left" data-aos-easing="linear"
      data-aos-duration="300">
-          <h2 class="about-header mt-0">Get to know me.</h2>
+          <h2 class="about-header mt-0">Get to Know Me</h2>
           <hr class="divider dark my-4">
-          <p class="about-text mb-2">placeholder text</p>
+          <p class="about-text mb-2">Ambitious full stack software engineer professional with academic, 
+            technical experience, and strong problem-solving skills. 
+            Recognized for the ability to manage multiple concurrent responsibilities and learn new technologies quickly.</p>
         </div>
       </div>
     </div>
@@ -147,15 +149,15 @@
         </div>
         <div data-aos="flip-up" data-aos-easing="linear"
        data-aos-duration="300">
-          <img src="https://icongr.am/devicon/mongodb-original-wordmark.svg?size=100" alt="mongodb" data-toggle="tooltip" data-placement="top" title="mongodb">
+          <img src="https://icongr.am/devicon/mongodb-original-wordmark.svg?size=100" alt="MongoDB" data-toggle="tooltip" data-placement="top" title="MongoDB">
         </div>
         <div data-aos="flip-up" data-aos-easing="linear"
        data-aos-duration="300">
-          <img src="https://icongr.am/devicon/nodejs-original.svg?size=100" alt="nodejs" data-toggle="tooltip" data-placement="top" title="nodejs">
+          <img src="https://icongr.am/devicon/nodejs-original.svg?size=100" alt="Node.js" data-toggle="tooltip" data-placement="top" title="Node.js">
         </div>
         <div data-aos="flip-up" data-aos-easing="linear"
         data-aos-duration="300">
-           <img src="https://icongr.am/devicon/postgresql-original-wordmark.svg?size=100" alt="postgresql" data-toggle="tooltip" data-placement="top" title="postgresql">
+           <img src="https://icongr.am/devicon/postgresql-original-wordmark.svg?size=100" alt="PostgreSQL" data-toggle="tooltip" data-placement="top" title="PostgreSQL">
          </div>
         <div data-aos="flip-up" data-aos-easing="linear"
        data-aos-duration="300">
@@ -177,18 +179,20 @@
     </div>
   </section>
 
-  <!-- Portfolio Grid -->
-  <section class="page-section bg-primary" id="portfolio-agency">
-    <div class="container">
-      <div class="row">
-        <div class="col-lg-12 text-center">
-          <h1 class="text-center mt-0">Portfolio</h1>
-          <hr class="divider dark my-4">
-        </div>
+<!-- Portfolio Grid -->
+<section class="page-section bg-primary" id="portfolio-agency">
+  <div class="container">
+    <div class="row">
+      <div class="col-lg-12 text-center">
+        <h1 class="text-center mt-0">Portfolio</h1>
+        <hr class="divider dark my-4">
       </div>
-      <div class="row">
-        <div class="col-lg-6 col-md-6 col-sm-6 portfolio-item" data-aos="zoom-in" data-aos-easing="linear"
-        data-aos-duration="300">
+    </div>
+
+    <div class="row">
+      <!-- Garden Gnome -->
+      <div class="col-lg-6 col-md-6 col-sm-6 portfolio-item" data-aos="zoom-in" data-aos-easing="linear"
+          data-aos-duration="300">
         <a class="portfolio-link" data-toggle="modal" href="#portfolioModal1">
           <div class="portfolio-hover">
             <div class="portfolio-hover-content">
@@ -197,14 +201,14 @@
           </div>
           <img class="img-fluid" src="./img/portfolio/GardenGnomeAllSeedsSS.JPEG" alt="">
         </a>
-        <div class="portfolio-caption">
-          <h4>Capstone project</h4>
-        </div>
+          <div class="portfolio-caption">
+            <h4>Garden Gnome</h4>
+          </div>
       </div>
 
-<!-- Message board -->
+        <!-- Message board -->
         <div class="col-lg-6 col-md-6 col-sm-6 portfolio-item" data-aos="zoom-in" data-aos-easing="linear"
-       data-aos-duration="300">
+            data-aos-duration="300">
           <a class="portfolio-link" data-toggle="modal" href="#portfolioModal2">
             <div class="portfolio-hover">
               <div class="portfolio-hover-content">
@@ -217,11 +221,10 @@
             <h4>Message Board</h4>
           </div>
         </div>
+    </div>
 
-      </div>
-
-      <div class="row">
-<!--zoo builder  -->
+    <div class="row">
+            <!--zoo builder  -->
         <div class="col-lg-6 col-md-6 col-sm-6 portfolio-item" data-aos="zoom-in" data-aos-easing="linear"
         data-aos-duration="300">
         <a class="portfolio-link" data-toggle="modal" href="#portfolioModal3">
@@ -235,27 +238,27 @@
         <div class="portfolio-caption">
           <h4>Zoo Builder</h4>
         </div>
-      </div>
-
-<!-- tic tac toe -->
-        <div class="col-lg-6 col-md-6 col-sm-6 portfolio-item" data-aos="zoom-in" data-aos-easing="linear"
-        data-aos-duration="300">
-        <a class="portfolio-link" data-toggle="modal" href="#portfolioModal4">
-          <div class="portfolio-hover">
-            <div class="portfolio-hover-content align-items-center">
-              <h1><i class="fas fa-plus fa-0x"></i> More Detail</h1>
-            </div>
-          </div>
-          <img class="img-fluid" src="./img/portfolio/ticTacToeGame.JPG" alt="">
-        </a>
-        <div class="portfolio-caption">
-          <h4>Tic Tac Toe</h4>
         </div>
-      </div>
 
-      </div>
+          <!-- tic tac toe -->
+        <div class="col-lg-6 col-md-6 col-sm-6 portfolio-item" data-aos="zoom-in" data-aos-easing="linear"
+            data-aos-duration="300">
+          <a class="portfolio-link" data-toggle="modal" href="#portfolioModal4">
+            <div class="portfolio-hover">
+              <div class="portfolio-hover-content align-items-center">
+                <h1><i class="fas fa-plus fa-0x"></i> More Detail</h1>
+              </div>
+            </div>
+            <img class="img-fluid" src="./img/portfolio/ticTacToeGame.JPG" alt="">
+          </a>
+          <div class="portfolio-caption">
+            <h4>Tic Tac Toe</h4>
+          </div>
+        </div>
     </div>
-  </section>
+      
+  </div>
+</section>
 
   <!-- Portfolio Modals -->
 
@@ -270,13 +273,16 @@
                 <!-- Project Details Go Here -->
                 <h2>Capstone Project</h2>
                 <img class="d-block mx-auto" src="./img/portfolio/GardenGnomeAllSeedsSS.JPEG" alt="Garden Gnome">
-                <p>Placeholder about project</p>
+                <p>A capstone project using React for the client and Django, Python, and a PostgreSQL database for the server. 
+                  The purpose of the app is to allow the user to create a database of seed information.  
+                  The user can sign in and create seeds and note if they are favorites or planted in the garden.  
+                  The user can also update the information about the seeds as that information changes.</p>
                 <ul class="list-inline">
-                  <li>Deployed Site: <a href="https://robert-a-johnston.github.io/garden-gnome-client/" target="_blank">Link</a>
+                  <li><a href="https://robert-a-johnston.github.io/garden-gnome-client/" target="_blank">Deployed Site</a>
                   </li>
-                  <li>Web Client GitHub Repository: <a href="https://github.com/robert-a-johnston/garden-gnome-client" target="_blank">Link</a>
+                  <li><a href="https://github.com/robert-a-johnston/garden-gnome-client" target="_blank">Web Client GitHub Repository</a>
                   </li>
-                  <li>API GitHub Repository: <a href="https://github.com/robert-a-johnston/garden-gnome-API" target="_blank">Link</a>
+                  <li><a href="https://github.com/robert-a-johnston/garden-gnome-API" target="_blank">API GitHub Repository</a>
                   </li>
                 </ul>
                 <button class="btn btn-primary" data-dismiss="modal" type="button">
@@ -303,11 +309,11 @@
                 <img class="d-block mx-auto" src="./img/portfolio/messageBoard.JPG" alt="Message Board">
                 <p>About the message board text placeholder </p>
                 <ul class="list-inline">
-                  <li>Deployed Site: <a href="https://team-taco-project.github.io/taco-message-board-client/" target="_blank">Link</a>
+                  <li><a href="https://team-taco-project.github.io/taco-message-board-client/" target="_blank">Deployed Site</a>
                   </li>
-                  <li>Web Client GitHub Repository: <a href="https://github.com/team-taco-project/taco-message-board-client" target="_blank">Link</a>
+                  <li><a href="https://github.com/team-taco-project/taco-message-board-client" target="_blank">Web Client GitHub Repository</a>
                   </li>
-                  <li>API GitHub Repository: <a href="https://github.com/team-taco-project/taco-message-board-API" target="_blank">Link</a>
+                  <li><a href="https://github.com/team-taco-project/taco-message-board-API" target="_blank">API GitHub Repository</a>
                   </li>
                 </ul>
                 <button class="btn btn-primary" data-dismiss="modal" type="button">
@@ -334,11 +340,11 @@
                 <img class="d-block mx-auto" src="./img/portfolio/zooBuilder.JPG" alt="Zoo Builder">
                 <p>Zoo builder placeholder text</p>
                 <ul class="list-inline">
-                  <li>Deployed Site: <a href="https://robert-a-johnston.github.io/zoo-builder-client/" target="_blank">Link</a>
+                  <li><a href="https://robert-a-johnston.github.io/zoo-builder-client/" target="_blank">Deployed Site</a>
                   </li>
-                  <li>Web Client GitHub Repository: <a href="https://github.com/robert-a-johnston/zoo-builder-client" target="_blank">Link</a>
+                  <li><a href="https://github.com/robert-a-johnston/zoo-builder-client" target="_blank">Web Client GitHub Repository</a>
                   </li>
-                  <li>API GitHub Repository: <a href="https://github.com/robert-a-johnston/zoo-builder" target="_blank">Link</a>
+                  <li><a href="https://github.com/robert-a-johnston/zoo-builder" target="_blank">API GitHub Repository</a>
                   </li>
                 </ul>
                 <button class="btn btn-primary" data-dismiss="modal" type="button">
@@ -365,9 +371,9 @@
                 <img class="d-block mx-auto" src="./img/portfolio/ticTacToeGame.JPG" alt="Tic Tac Toe">
                 <p>Tic-tac-toe game text placeholder</p>
                 <ul class="list-inline">
-                  <li>Deployed Site: <a href="https://robert-a-johnston.github.io/Tic-Tac-Toe-client/" target="_blank">Link</a>
+                  <li><a href="https://robert-a-johnston.github.io/Tic-Tac-Toe-client/" target="_blank">Deployed Site</a>
                   </li>
-                  <li>Web Client GitHub Repository: <a href="https://github.com/robert-a-johnston/Tic-Tac-Toe-client" target="_blank">Link</a>
+                  <li><a href="https://github.com/robert-a-johnston/Tic-Tac-Toe-client" target="_blank">Web Client GitHub Repository</a>
                   </li>
                 </ul>
                 <button class="btn btn-primary" data-dismiss="modal" type="button">
@@ -395,7 +401,7 @@
       <hr class="divider my-4">
       <div class="row justify-content-center">
         <div class="col-lg-2 text-center">
-          <a href="" target="_blank">
+          <a href="https://docs.google.com/document/d/1W_AzN3xS_RNZ5cVVvDPkc3Eiqx894AV3/edit?usp=sharing&ouid=101975851101203364751&rtpof=true&sd=true" target="_blank">
             <i class="fas fa-4x fa-file-pdf mb-2"></i>
           </a>
           <p>View Resume</p>
