Update resume link

--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
             <a class="nav-link js-scroll-trigger" href="#contact">Contact</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link js-scroll-trigger" href="https://docs.google.com/document/d/1W_AzN3xS_RNZ5cVVvDPkc3Eiqx894AV3/edit?usp=sharing&ouid=101975851101203364751&rtpof=true&sd=true" target="_blank">View Resume</a>
+            <a class="nav-link js-scroll-trigger" href="https://drive.google.com/file/d/1UI6i5I1TUf3RRXrGoJApsdcDlyOgVtxe/view?usp=sharing" target="_blank">View Resume</a>
           </li>
         </ul>
       </div>
@@ -401,7 +401,7 @@
       <hr class="divider my-4">
       <div class="row justify-content-center">
         <div class="col-lg-2 text-center">
-          <a href="https://docs.google.com/document/d/1W_AzN3xS_RNZ5cVVvDPkc3Eiqx894AV3/edit?usp=sharing&ouid=101975851101203364751&rtpof=true&sd=true" target="_blank">
+          <a href="https://drive.google.com/file/d/1UI6i5I1TUf3RRXrGoJApsdcDlyOgVtxe/view?usp=sharing" target="_blank">
             <i class="fas fa-4x fa-file-pdf mb-2"></i>
           </a>
           <p>View Resume</p>
