Add app descriptions

--- a/index.html
+++ b/index.html
@@ -307,7 +307,11 @@
                 <!-- Project Details Go Here -->
                 <h2>Message Board</h2>
                 <img class="d-block mx-auto" src="./img/portfolio/messageBoard.JPG" alt="Message Board">
-                <p>About the message board text placeholder </p>
+                <p>The message board was a group project.  
+                  The group used React for the client and Express, Mongoose, and a MongoDB database for the server.  
+                  In this app, a user can sign in and create posts and comments for others to read.  
+                  The user can also edit and delete those posts that they created but not posts created by other users.  
+                  This was the first React framework full-stack application built.</p>
                 <ul class="list-inline">
                   <li><a href="https://team-taco-project.github.io/taco-message-board-client/" target="_blank">Deployed Site</a>
                   </li>
@@ -338,7 +342,10 @@
                 <!-- Project Details Go Here -->
                 <h2>Zoo Builder</h2>
                 <img class="d-block mx-auto" src="./img/portfolio/zooBuilder.JPG" alt="Zoo Builder">
-                <p>Zoo builder placeholder text</p>
+                <p>Zoo Builder uses Javascript HTML and SCSS for the server and Express, Mongoose, and a MongoDB database for the server.  
+                  In this app, a user can sign in and create a list of animals they would like to be in their zoo.  
+                  The user can update animal information and remove animals from the zoo if they would like.  
+                  This was the first full-stack application built.</p>
                 <ul class="list-inline">
                   <li><a href="https://robert-a-johnston.github.io/zoo-builder-client/" target="_blank">Deployed Site</a>
                   </li>
@@ -369,7 +376,9 @@
                 <!-- Project Details Go Here -->
                 <h2>Tic Tac Toe!</h2>
                 <img class="d-block mx-auto" src="./img/portfolio/ticTacToeGame.JPG" alt="Tic Tac Toe">
-                <p>Tic-tac-toe game text placeholder</p>
+                <p>Tic-Tac-Toe uses Javascript HTML and CSS to create a server-side tic-tac-toe game.  
+                  This was the first project created using Git and GitHub as version control methods that would be used in all of the other projects.  
+                  This project demonstrated the agile workflow that would be expected in all future projects.</p>
                 <ul class="list-inline">
                   <li><a href="https://robert-a-johnston.github.io/Tic-Tac-Toe-client/" target="_blank">Deployed Site</a>
                   </li>
