Change about me section

--- a/index.html
+++ b/index.html
@@ -89,9 +89,15 @@
      data-aos-duration="300">
           <h2 class="about-header mt-0">Get to Know Me</h2>
           <hr class="divider dark my-4">
-          <p class="about-text mb-2">Ambitious full stack software engineer professional with academic, 
-            technical experience, and strong problem-solving skills. 
-            Recognized for the ability to manage multiple concurrent responsibilities and learn new technologies quickly.</p>
+          <p class="about-text mb-2"> I was a zookeeper for nine years and due to an injury, I had to change career paths. 
+            I chose software engineering because like being a zookeeper you don’t ever stop learning something new. 
+            I returned to school to retrain myself since it had been a while since I had done even basic programming. 
+            But after finishing my degree didn’t feel like it gave me the complete skills I needed. 
+            So, I went to General Assembly to round out my technical skills in a three-month immersive software engineering course. 
+            I have coded almost every day since and have loved it.</p>
+            <p class="about-text mb-2">I can now create full-stack applications from scratch and know how to find the answers to the bugs that pop up. 
+            So, I will continue to build things. But I can also teach you how to milk a goat.   
+            </p>
         </div>
       </div>
     </div>
