Add new project

--- a/index.html
+++ b/index.html
@@ -196,6 +196,21 @@
     </div>
 
     <div class="row">
+      <!-- Algo Fun -->
+      <div class="col-lg-6 col-md-6 col-sm-6 portfolio-item" data-aos="zoom-in" data-aos-easing="linear"
+          data-aos-duration="300">
+        <a class="portfolio-link" data-toggle="modal" href="#portfolioModal5">
+          <div class="portfolio-hover">
+            <div class="portfolio-hover-content">
+              <h1><i class="fas fa-plus fa-0x"></i> View More!</h1>
+            </div>
+          </div>
+          <img class="img-fluid" src="./img/portfolio/algorithmFun.png" alt="algorithm fun">
+        </a>
+          <div class="portfolio-caption">
+            <h4>Algorithm Fun</h4>
+          </div>
+      </div>
       <!-- Garden Gnome -->
       <div class="col-lg-6 col-md-6 col-sm-6 portfolio-item" data-aos="zoom-in" data-aos-easing="linear"
           data-aos-duration="300">
@@ -211,7 +226,24 @@
             <h4>Garden Gnome</h4>
           </div>
       </div>
+    </div>
 
+    <div class="row">
+           <!--zoo builder  -->
+           <div class="col-lg-6 col-md-6 col-sm-6 portfolio-item" data-aos="zoom-in" data-aos-easing="linear"
+           data-aos-duration="300">
+           <a class="portfolio-link" data-toggle="modal" href="#portfolioModal3">
+             <div class="portfolio-hover">
+               <div class="portfolio-hover-content">
+                 <h1><i class="fas fa-plus fa-0x"></i> View More!</h1>
+               </div>
+             </div>
+             <img class="img-fluid" src="./img/portfolio/zooBuilder.JPG" alt="">
+           </a>
+           <div class="portfolio-caption">
+             <h4>Zoo Builder</h4>
+           </div>
+           </div>
         <!-- Message board -->
         <div class="col-lg-6 col-md-6 col-sm-6 portfolio-item" data-aos="zoom-in" data-aos-easing="linear"
             data-aos-duration="300">
@@ -230,22 +262,6 @@
     </div>
 
     <div class="row">
-            <!--zoo builder  -->
-        <div class="col-lg-6 col-md-6 col-sm-6 portfolio-item" data-aos="zoom-in" data-aos-easing="linear"
-        data-aos-duration="300">
-        <a class="portfolio-link" data-toggle="modal" href="#portfolioModal3">
-          <div class="portfolio-hover">
-            <div class="portfolio-hover-content">
-              <h1><i class="fas fa-plus fa-0x"></i> View More!</h1>
-            </div>
-          </div>
-          <img class="img-fluid" src="./img/portfolio/zooBuilder.JPG" alt="">
-        </a>
-        <div class="portfolio-caption">
-          <h4>Zoo Builder</h4>
-        </div>
-        </div>
-
           <!-- tic tac toe -->
         <div class="col-lg-6 col-md-6 col-sm-6 portfolio-item" data-aos="zoom-in" data-aos-easing="linear"
             data-aos-duration="300">
@@ -348,7 +364,7 @@
                 <!-- Project Details Go Here -->
                 <h2>Zoo Builder</h2>
                 <img class="d-block mx-auto" src="./img/portfolio/zooBuilder.JPG" alt="Zoo Builder">
-                <p>Zoo Builder uses Javascript HTML and SCSS for the server and Express, Mongoose, and a MongoDB database for the server.  
+                <p>Zoo Builder uses Javascript, HTML, and SCSS for the server and Express, Mongoose, and a MongoDB database for the server.  
                   In this app, a user can sign in and create a list of animals they would like to be in their zoo.  
                   The user can update animal information and remove animals from the zoo if they would like.  
                   This was the first full-stack application built.</p>
@@ -382,13 +398,46 @@
                 <!-- Project Details Go Here -->
                 <h2>Tic Tac Toe!</h2>
                 <img class="d-block mx-auto" src="./img/portfolio/ticTacToeGame.JPG" alt="Tic Tac Toe">
-                <p>Tic-Tac-Toe uses Javascript HTML and CSS to create a server-side tic-tac-toe game.  
+                <p>Tic-Tac-Toe uses JavaScript, HTML, and CSS to create a server-side tic-tac-toe game.  
                   This was the first project created using Git and GitHub as version control methods that would be used in all of the other projects.  
                   This project demonstrated the agile workflow that would be expected in all future projects.</p>
                 <ul class="list-inline">
                   <li><a href="https://robert-a-johnston.github.io/Tic-Tac-Toe-client/" target="_blank">Deployed Site</a>
                   </li>
                   <li><a href="https://github.com/robert-a-johnston/Tic-Tac-Toe-client" target="_blank">Web Client GitHub Repository</a>
+                  </li>
+                </ul>
+                <button class="btn btn-primary" data-dismiss="modal" type="button">
+                  <i class="fas fa-times"></i>
+                  Close Project</button>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+  <!-- Modal 5 - Algo Fun -->
+  <div class="portfolio-modal modal fade" id="portfolioModal5" tabindex="-1" role="dialog" aria-hidden="true">
+    <div class="modal-dialog">
+      <div class="modal-content">
+        <div class="container">
+          <div class="row">
+            <div class="col-lg-12">
+              <div class="modal-body">
+                <!-- Project Details Go Here -->
+                <h2>Algorithm Fun</h2>
+                <img class="d-block mx-auto" src="./img/portfolio/algorithmFun.png" alt="Algorithm Fun">
+                <p>Research into different path searching and array sorting algorithms led to a project that has a visual representation
+                  of several different algorithms.  Also provided is information about each algorithm as well as a short description of implementation.  The implementation
+                  is one of multiple ways to implement each algorithm.
+                  The site is created using React with React hooks for the sorter and React classes for the path finder.  It also contains HTML, CSS, bootstrap,
+                  and JavaScript.
+                </p>
+                <ul class="list-inline">
+                  <li><a href="https://robert-a-johnston.github.io/algorithm-demo/" target="_blank">Deployed Site</a>
+                  </li>
+                  <li><a href="https://github.com/robert-a-johnston/algorithm-demo" target="_blank">Web Client GitHub Repository</a>
                   </li>
                 </ul>
                 <button class="btn btn-primary" data-dismiss="modal" type="button">
