Add Amazon Web Services

--- a/index.html
+++ b/index.html
@@ -111,6 +111,10 @@
       <div class="row devicon-list">
         <div data-aos="flip-up" data-aos-easing="linear"
        data-aos-duration="300">
+          <img src= "https://icongr.am/devicon/amazonwebservices-original.svg?size=128&color=currentColor" alt="Visual Studio" data-toggle="tooltip" data-placement="top" title="Amazon Web Services">
+        </div>
+        <div data-aos="flip-up" data-aos-easing="linear"
+       data-aos-duration="300">
           <img src="https://icongr.am/devicon/bootstrap-plain-wordmark.svg?size=100&color=563d7c" alt="Bootstrap" data-toggle="tooltip" data-placement="top" title="Bootstrap">
         </div>
         <div data-aos="flip-up" data-aos-easing="linear"
@@ -177,10 +181,7 @@
        data-aos-duration="300">
           <img src="https://icongr.am/devicon/sass-original.svg?size=100" alt="Sass" data-toggle="tooltip" data-placement="top" title="Sass">
         </div>
-        <div data-aos="flip-up" data-aos-easing="linear"
-       data-aos-duration="300">
-          <img src="https://icongr.am/devicon/visualstudio-plain.svg?size=100&color=currentColor" alt="Visual Studio" data-toggle="tooltip" data-placement="top" title="Visual Studio Code">
-        </div>
+        
       </div>
     </div>
   </section>
